fixed centering on mobile

--- a/src/containers/HomePage.css
+++ b/src/containers/HomePage.css
@@ -142,14 +142,6 @@ img {
   line-height: 1.9;
 }
 
-/* Container */
-.container {
-  max-width: 70%;
-  margin: auto;
-  overflow: hidden;
-  padding: 0 0 2rem 2rem;
-}
-
 /* Text Styles */
 .text-xl {
   font-size: 2rem;
